style.css
/* Font Face */
@font-face {
  font-family: 'MADE Likes Slab';
  src: url('assets/fonts/MADE-Likes-Slab.otf');
}

/* Base Styles */

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

html {
  height: 100%;
  overflow-x: hidden;
}

body {
  width: 100%;
  height: 100%;
  background-color: #f1e7d1;
  display: flex;
  flex-direction: column;
  padding: 8px 8px 0 8px;
  color: #282727;
  font-family: 'MADE Likes Slab';
  font-weight: 100;
  overflow-x: hidden;
  position: relative;
}

body::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  background-image: url('./assets/bgNO.webp');
  background-position: center top;
  background-size: 100% 100%;
  background-repeat: no-repeat;
  z-index: -1;
  opacity: 0.9;
}

/* .loader {
  display: none;
} */
.loader {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  height: 100dvh;
  background-color: #ebd2ad;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

body .loader img {
  height: 16rem;
  width: 16rem;
}
h2 {
  font-size: 2.7em;
  font-weight: 100;
  margin: 36px 0px;
}

p {
  font-size: 1.5em;
  margin: 24px 0px;
}

.page-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 100px 0 100px;
}

.hero {
  display: flex;
  flex-direction: column;
}

.page-section img {
  flex-shrink: 0;
}

.timeline img:not(.language-selector) {
  pointer-events: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  /* transition: all 0.2s ease-in-out; */
  transition: opacity 0.5s ease-in-out;
  opacity: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
}

.language-selector {
  position: relative;
  align-self: end;
  margin-right: 25px;
  margin-top: 25px;
  margin-bottom: 0;
  cursor: pointer;
  z-index: 4;
  transition: none;
  pointer-events: auto !important;
}

.hero-images {
  width: 1209px;
  height: 1054px;
  margin-left: 12rem;
}

/* BIRTH */
.section-birth {
  display: flex;
  flex-direction: column;
}

.birth {
  width: 1304px;
  height: 979px;
  margin-top: -260px;
}

.bs-text {
  position: relative;
  width: 350px;
  margin-top: -670px;
  margin-left: 850px;
}

/* BAPTISM */
.section-baptism {
  display: flex;
  flex-direction: column;
}

.baptism {
  margin-top: -450px;
  width: 1330px;
  height: 558px;
}

.bbs-text {
  position: relative;
  width: 320px;
  margin-top: 170px;
  margin-left: 200px;
}

/* SCHOOL */
.section-school {
  display: flex;
  flex-direction: column;
}

.school {
  width: 1287px;
  height: 1061px;
  margin-top: -200px;
  margin-left: 180px;
  z-index: 2;
}

.sy-text {
  position: relative;
  margin-top: -300px;
  margin-left: 1080px;
  z-index: 2;
}

/* UNIVERSITY */
.section-university {
  display: flex;
  flex-direction: column;
}

.university {
  width: 1186px;
  height: 912px;
  margin-top: -480px;
  margin-left: -30px;
  z-index: 1;
}

.us-text {
  position: relative;
  margin-top: 140px;
  margin-left: 100px;
  width: 350px;
}

/* WEDDING */
.section-wedding {
  display: flex;
  flex-direction: column;
}

.wedding {
  width: 1351px;
  height: 887px;
  margin-top: -210px;
  margin-left: -180px;
}

.ws-text {
  position: relative;
  margin-top: -710px;
  margin-left: 810px;
  width: 300px;
}

/* DAUGHTERS */
.section-daughters {
  display: flex;
  flex-direction: column;
}

.ds-text {
  position: relative;
  margin-top: 280px;
  margin-left: 120px;
  width: 350px;
}

.daughters {
  width: 674px;
  height: 484px;
  margin-top: -550px;
  margin-left: 500px;
}

/* WORK */
.section-work {
  display: flex;
  flex-direction: column;
}

.work {
  width: 1421px;
  height: 1359px;
}

.rs-text {
  position: relative;
  margin-top: -500px;
  margin-left: 960px;
  width: 350px;
}

/* GRANDSON */
.section-grandson {
  display: flex;
  flex-direction: column;
}

.grandson {
  width: 1352px;
  height: 1280px;
  margin-top: 110px;
  margin-left: -50px;
}

.gs-text {
  position: relative;
  margin-top: -710px;
  margin-left: 180px;
}

/* RETIREMENT */
.section-retirement {
  position: relative;
  display: flex;
  flex-direction: column;
  margin-top: 350px;
}

.flex-retirement {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  /* align-items: center; */
  gap: 50px;
  margin-top: 20px;
}

.retirement-carousel {
  display: grid;
  background-image: url('./assets/Polaroid mockup3@2x.webp');
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.carousel-items {
  position: relative;
  display: inherit;
  background-color: #282828;
  margin: 48px 60px 0px 61px;
  width: 653px;
  height: 540px;
  transform: rotate(-1deg);
  overflow: hidden;
  /* border: 1px solid transparent; */
  will-change: transform;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.carousel-item {
  position: absolute;
  inset: 0;
  opacity: 0;
  transition: 0.5s opacity ease-in-out;
  transition-delay: 0s;
  will-change: opacity;
  backface-visibility: hidden;
}

.carousel-item.carousel-active {
  /* display: block; */ /* Show the active item */
  opacity: 1;
  z-index: 1;
  transition-delay: 0ms;
  /* animation: 0.5s linear 0s both fadeIn; */
}

/* @keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
 */
.carousel-item img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* object-position: center; */
  will-change: transform;
  backface-visibility: hidden;
}

.controls {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  /* margin: 10px 39px 21px 38px; */
  margin: 10px 61px 28px 63px;
  transform: rotate(-1deg);
}

.carousel-control {
  background-color: transparent;
  border: none;
  color: black;
  cursor: pointer;
  margin: 0 10px;
  width: 120px;
  height: 116px;
  -webkit-tap-highlight-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
/* ... */

